[gd_scene load_steps=2 format=3 uid="uid://bn5cgoyo65epp"]

[ext_resource type="Script" path="res://ui/menu_start.gd" id="1_rd4nq"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rd4nq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 33.0
offset_right = 338.0
offset_bottom = 264.0

[node name="btn_start" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../btn_quit")
text = "Start"

[node name="btn_options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="btn_quit" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../btn_start")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
